# CSE-4095-Deep-Learning-Project-Proposal-Pneumonia-Detection-from-Chest-X-Rays-new

./: .gitignore  .pre-commit-config.yaml  COMPLETE_GUIDE_CN.md  DELIVERABLES_CHECKLIST.md  FILE_CLEANUP_REPORT.md  INSTRUCTOR_QUICK_START.md  LICENSE  MODEL_CARD.md  OPTIMAL_DATASET_REPORT.md  PROJECT_ENHANCEMENT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  TRAINING_GUIDE.md  environment.yml  pneumonia_x_ray_project_implementation_playbook_v_1.3.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/workflows/: tests.yml
docs/: ANALYSIS_GUIDE.md  CHANGELOG.md  CODE_OPTIMIZATION_SUMMARY.md  EXECUTIVE_SUMMARY_EN.md  FINAL_PROJECT_REPORT.md  MODEL_CARD.md  PLAYBOOK.md  PRESENTATION_SCRIPT.md  PRESENTATION_SLIDES_OUTLINE.md  QUICK_RESULTS_REFERENCE.md  QUICK_RESULTS_REFERENCE_EN.md  README.md
model_backups/: README.md
reports/: AUTO_PROJECT_REPORT.md  COMPREHENSIVE_EXPERIMENTAL_ANALYSIS.md  COMPREHENSIVE_EXPERIMENTAL_ANALYSIS_EN.md  best_model_test.json  best_model_val.json  eval_report.json  gradcam_test.json  model_comparison.json  test_aug_aggressive.json  test_densenet121.json  test_lr_0.0001.json
reports/calibration/: calibration_report.json
reports/calibration_test/: calibration_report.json
reports/calibration_val/: calibration_report.json
reports/comprehensive/: EXPERIMENT_SUMMARY.md  experiment_summary.csv
reports/error_analysis/: failure_modes.json
reports/error_analysis_val/: failure_modes.json
reports/full_analysis/error_analysis/: failure_modes.json
reports/full_analysis/experiment_comparison/: EXPERIMENT_SUMMARY.md  experiment_summary.csv
reports/full_analysis/threshold_analysis/: threshold_sweep_results.json
reports/threshold_sweep_screening/: threshold_sweep_results.json
scripts/: README.md  __init__.py  analyze_all_experiments.py  auto_optimize_hyperparams.py  automated_full_training.ps1  benchmark_inference.py  calibration_analysis.py  check_cuda.py  compare_augmentation_results.py  compare_model_results.py  complete_analysis.ps1  complete_project_analysis.ps1  create_all_training_configs.py  create_missing_configs.py  create_optimal_dataset.py  cross_validation.py  demo_presentation.py  domain_shift_analysis.py  download_sample_data.py  ensemble_evaluation.py  error_analysis.py  find_optimal_lr.py  generate_project_report.py  gradcam_evaluation.py  label_noise_detection.py  monitor_training.py  optuna_hyperparameter_search.py  plot_metrics.py  project.ps1  project_dashboard.py  run_experiments.py  run_full_analysis.ps1  run_tests.ps1  run_tests.sh  threshold_sweep.py  uncertainty_estimation.py  verify_dataset_integrity.py  verify_environment.py  visualize_augmentations.py
src/: eval.py  train.py
src/app/: __init__.py  streamlit_app.py
src/configs/: README.md  _base.yaml  aug_aggressive.yaml  aug_light.yaml  aug_medium.yaml  balanced_training.yaml  baseline_efficientnet.yaml  baseline_resnet18.yaml  colab_friendly.yaml  demo_quick.yaml  ensemble_densenet121.yaml  ensemble_efficientnet_b1_448.yaml  ensemble_resnet18_448.yaml  ensemble_resnet50.yaml  final_model.yaml  focal_loss_gamma15.yaml  focal_loss_gamma20.yaml  focal_loss_gamma25.yaml  full_power.yaml  full_resnet18.yaml  high_res_efficientnet_b3_512.yaml  high_res_resnet18_512.yaml  lr_0.0001.yaml  lr_0.0005.yaml  lr_0.001.yaml  medical_screening.yaml  medical_screening_optimized.yaml  model_densenet121.yaml  model_efficientnet_b0.yaml  model_efficientnet_b2.yaml  model_resnet18.yaml  model_resnet50.yaml  quick_test_resnet18.yaml
src/data/: __init__.py  datamodule.py
src/models/: __init__.py  ensemble.py  factory.py  losses.py
src/utils/: __init__.py  calibration.py  config_loader.py  config_schema.py  config_validator.py  dataset_hash.py  device.py  export.py  gradcam.py  lr_finder.py  metrics.py  model_info.py  training.py  uncertainty.py
tests/: README.md  __init__.py  conftest.py  test_datamodule.py  test_eval.py  test_export.py  test_gradcam.py  test_integration.py  test_losses.py  test_metrics.py  test_models.py  test_streamlit_app.py  test_train.py  test_utils.py
